tests/bad/testProcRedeclaration.grc
proc duplicate(): void {
	print("first implementation")
}

proc duplicate(): void {
	print("second implementation")
}

duplicate()
